k8s/network/postgres-allow.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres-allow
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: postgres
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: worker
        - podSelector:
            matchLabels:
              app: result
      ports:
        - protocol: TCP
          port: 5432
