k8s/network/worker-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: worker-egress
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: worker
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: redis
      ports:
        - protocol: TCP
          port: 6379
    - to:
       - ipBlock:
          cidr: 0.0.0.0/0
